--- a/admin/home.html
+++ b/admin/home.html
@@ -57,27 +57,27 @@
                   <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                   Bảng điều khiển
               </a>
-              <a class="nav-link"  href="/admin/tour">
+              <a class="nav-link"  href="/admin/tour.html">
                   <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                   Tour Management
               </a>
-              <a class="nav-link"  href="/admin/post">
+              <a class="nav-link"  href="/admin/post.html">
                   <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                   News Management
               </a>
-              <a class="nav-link" href="/admin/employee">
+              <a class="nav-link" href="/admin/employee.html">
                   <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                   Employee Management
               </a>
-              <a class="nav-link" href="/admin/customer">
+              <a class="nav-link" href="/admin/customer.html">
                   <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                   Customer Management
               </a>
-              <a class="nav-link" href="/admin/booking">
+              <a class="nav-link" href="/admin/booking.html">
                   <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                   Booking Management
               </a>
-              <a class="nav-link" href="/admin/comment">
+              <a class="nav-link" href="/admin/comment.html">
                   <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                   Comment Management
               </a>
